include/grx-3.0.h

typedef struct _GrxVideoDriver  GrxVideoDriver;
typedef struct _GrxVideoMode    GrxVideoMode;
typedef struct _GrxVideoModeExt GrxVideoModeExt;
/* ================================================================== */
/*                        SYSTEM TYPE DEF's                           */
/* ================================================================== */

/* need unsigned 32 bit integer for color stuff */
typedef guint32 GrxColor;
/**
 * GrxVideoDriver:
 * @name: The name of the driver
 * @adapter: The adapter type
 * @inherit: Video modes from this driver will be inherited
 * @modes: Table of supported modes
 * @n_modes: Number of modes in @modes
 * @detect: Function to detect the driver
 * @init: Function to initialize the driver
 * @reset: Function to reset the driver
 * @select_mode: Function to select the video mode of the driver
 * @flags: Driver flags
 *
 * The video driver descriptor structure
 */
struct _GrxVideoDriver {
    gchar *name;                        /* driver name */
    GrxVideoAdapter adapter;            /* adapter type */
    struct _GrxVideoDriver  *inherit;   /* inherit video modes from this */
    GrxVideoMode   *modes;              /* table of supported modes */
    gint    n_modes;                    /* number of modes */
    gint  (*detect)(void);
    gint  (*init)(gchar *options);
    void  (*reset)(void);
    GrxVideoMode *(*select_mode)(GrxVideoDriver *drv, gint w, gint h,
                                 gint bpp, gboolean txt, guint *ep);
    GrxVideoDriverFlags flags;
};
/**
 * GrxVideoMode:
 * @present: Indicates if the video mode is actually present
 * @bpp: Bits per pixel
 * @width: Width in pixels
 * @height: Height in pixels
 * @mode: BIOS mode number (if any)
 * @line_offset: Scan line length
 * @user_data: Can be used by the driver for anything.
 * @extended_info: Extra info (may be shared with other video modes)
 * 
 * Video driver mode descriptor structure
 */
struct _GrxVideoMode {
    gboolean present;                    /* is it really available? */
    guint8   bpp;                        /* log2 of # of colors */
    guint16  width,height;               /* video mode geometry */
    guint16  mode;                       /* BIOS mode number (if any) */
    gint     line_offset;                /* scan line length */
    gint     user_data;                  /* driver can use it for anything */
    GrxVideoModeExt *extended_info;      /* extra info (maybe shared) */
};
/**
 * GrxVideoModeExt:
 * @mode: Frame driver mode for this video mode
 * @drv: Optional frame driver override
 * @frame: Frame buffer address
 * @cprec: Color component precisions
 * @cpos: Color component positions
 * @flags: Video mode flags
 * @setup: Setup function
 * @set_virtual_size: Set virtual size function
 * @scroll: Scroll function
 * @set_bank: Set bank function
 * @set_rw_banks: Set read/write banks function
 * @load_color: Load color pallet function
 * @lfb_selector: Linear frame buffer selector
 *
 * Video driver mode descriptor extension structure. This is a separate
 * structure accessed via a pointer from the main mode descriptor. The
 * reason for this is that frequently several modes can share the same
 * extended info.
 */
struct _GrxVideoModeExt {
    GrxFrameMode mode;                  /* frame driver for this video mode */
    GrxFrameDriver *drv;                /* optional frame driver override */
    guint8 *frame;                      /* frame buffer address */
    guint8  cprec[3];                   /* color component precisions */
    guint8  cpos[3];                    /* color component bit positions */
    GrxVideoModeFlags flags;            /* mode flag bits; see "grdriver.h" */
    gboolean (*setup)(GrxVideoMode *md, gboolean no_clear);
    gboolean (*set_virtual_size)(GrxVideoMode *md, guint w, guint h, GrxVideoMode *result);
    gboolean (*scroll)(GrxVideoMode *md, gint x, gint y, gint result[2]);
    void  (*set_bank)(gint bank);
    void  (*set_rw_banks)(gint read_bank, gint write_bank);
    void  (*load_color)(GrxColor c, GrxColor r, GrxColor g, GrxColor b);
    gint    lfb_selector;
};
/* ================================================================== */
/*                            COLOR STUFF                             */
/* ================================================================== */

/**
 * GrxColorMode:
 *
 * Flags to 'OR' to colors for various operations
 */
typedef enum /*< flags >*/ {
    GRX_COLOR_MODE_WRITE = 0UL,           /* write color */
    GRX_COLOR_MODE_XOR   = 0x01000000UL,  /* to "XOR" any color to the screen */
    GRX_COLOR_MODE_OR    = 0x02000000UL,  /* to "OR" to the screen */
    GRX_COLOR_MODE_AND   = 0x03000000UL,  /* to "AND" to the screen */
    GRX_COLOR_MODE_IMAGE = 0x04000000UL,  /* BLIT: write, except given color */
} GrxColorMode;
GrxColor GrColorValue(GrxColor c);
GrxColor GrColorMode(GrxColor c);
GrxColor GrWriteModeColor(GrxColor c);
GrxColor GrXorModeColor(GrxColor c);
GrxColor GrOrModeColor(GrxColor c);
GrxColor GrAndModeColor(GrxColor c);
GrxColor GrImageModeColor(GrxColor c);
void    GrResetColors(void);
void    GrSetRGBcolorMode(void);
void    GrRefreshColors(void);
GrxColor GrNumColors(void);
GrxColor GrNumFreeColors(void);
GrxColor GrBlack(void);
GrxColor GrWhite(void);
GrxColor GrBuildRGBcolorT(int r,int g,int b);
GrxColor GrBuildRGBcolorR(int r,int g,int b);
int     GrRGBcolorRed(GrxColor c);
int     GrRGBcolorGreen(GrxColor c);
int     GrRGBcolorBlue(GrxColor c);
GrxColor GrAllocColor(int r,int g,int b);   /* shared, read-only */
GrxColor GrAllocColorID(int r,int g,int b); /* potentially inlined version */
GrxColor GrAllocColor2(long hcolor);        /* shared, read-only, 0xRRGGBB */
GrxColor GrAllocColor2ID(long hcolor);      /* potentially inlined version */
GrxColor GrAllocCell(void);                 /* unshared, read-write */
GrxColor *GrAllocEgaColors(void);           /* shared, read-only standard EGA colors */
void    GrSetColor(GrxColor c,int r,int g,int b);
void    GrFreeColor(GrxColor c);
void    GrFreeCell(GrxColor c);
void    GrQueryColor(GrxColor c,int *r,int *g,int *b);
void    GrQueryColorID(GrxColor c,int *r,int *g,int *b);
void    GrQueryColor2(GrxColor c,long *hcolor);
void    GrQueryColor2ID(GrxColor c,long *hcolor);
int     GrColorSaveBufferSize(void);
void    GrSaveColors(void *buffer);
void    GrRestoreColors(void *buffer);
#define GrColorValue(c)         ((GrxColor)(c) & GRX_COLOR_VALUE_MASK)
#define GrColorMode(c)          ((GrxColor)(c) & GRX_COLOR_MODE_MASK)
#define GrWriteModeColor(c)     (GrColorValue(c) | GRX_COLOR_MODE_WRITE)
#define GrXorModeColor(c)       (GrColorValue(c) | GRX_COLOR_MODE_XOR)
#define GrOrModeColor(c)        (GrColorValue(c) | GRX_COLOR_MODE_OR)
#define GrAndModeColor(c)       (GrColorValue(c) | GRX_COLOR_MODE_AND)
#define GrImageModeColor(c)     (GrColorValue(c) | GRX_COLOR_MODE_IMAGE)
#define GrNumColors()           (GrColorInfo->ncolors)
#define GrNumFreeColors()       (GrColorInfo->nfree)
#define GrBlack() (                                                            \
        (GrColorInfo->black == GRX_COLOR_NONE) ?                               \
        (GrBlack)() :                                                          \
        GrColorInfo->black                                                     \
)
#define GrWhite() (                                                            \
        (GrColorInfo->white == GRX_COLOR_NONE) ?                               \
        (GrWhite)() :                                                          \
        GrColorInfo->white                                                     \
)
#define GrBuildRGBcolorT(r,g,b) ((                                             \
        ((GrxColor)((int)(r) & GrColorInfo->mask[0]) << GrColorInfo->shift[0]) |\
        ((GrxColor)((int)(g) & GrColorInfo->mask[1]) << GrColorInfo->shift[1]) |\
        ((GrxColor)((int)(b) & GrColorInfo->mask[2]) << GrColorInfo->shift[2])  \
        ) >> GrColorInfo->norm                                                 \
)
#define GrBuildRGBcolorR(r,g,b) GrBuildRGBcolorT(                              \
        (((unsigned int)(r)) > GrColorInfo->mask[0]) ? 255 : (unsigned int)(r) + GrColorInfo->round[0], \
        (((unsigned int)(g)) > GrColorInfo->mask[1]) ? 255 : (unsigned int)(g) + GrColorInfo->round[1], \
        (((unsigned int)(b)) > GrColorInfo->mask[2]) ? 255 : (unsigned int)(b) + GrColorInfo->round[2]  \
)
#define GrRGBcolorRed(c) (                                                     \
        (int)(((GrxColor)(c) << GrColorInfo->norm) >> GrColorInfo->shift[0]) &  \
        (GrColorInfo->mask[0])                                                 \
)
#define GrRGBcolorGreen(c) (                                                   \
        (int)(((GrxColor)(c) << GrColorInfo->norm) >> GrColorInfo->shift[1]) &  \
        (GrColorInfo->mask[1])                                                 \
)
#define GrRGBcolorBlue(c) (                                                    \
        (int)(((GrxColor)(c) << GrColorInfo->norm) >> GrColorInfo->shift[2]) &  \
        (GrColorInfo->mask[2])                                                 \
)
#define GrAllocColorID(r,g,b) (GrColorInfo->RGBmode ?                          \
        GrBuildRGBcolorR(r,g,b) :                                              \
        GrAllocColor(r,g,b)                                                    \
)
#define GrAllocColor2(hcolor) (GrAllocColor(                                   \
        ((hcolor & 0xff0000) >> 16),                                           \
        ((hcolor & 0x00ff00) >> 8),                                            \
        (hcolor & 0x0000ff))                                                   \
)
#define GrAllocColor2ID(hcolor) (GrAllocColorID(                               \
        ((hcolor & 0xff0000) >> 16),                                           \
        ((hcolor & 0x00ff00) >> 8),                                            \
        (hcolor & 0x0000ff))                                                   \
)
#define GrQueryColorID(c,r,g,b) do {                                           \
        if(GrColorInfo->RGBmode) {                                             \
        *(r) = GrRGBcolorRed(c);                                               \
        *(g) = GrRGBcolorGreen(c);                                             \
        *(b) = GrRGBcolorBlue(c);                                              \
        break;                                                                 \
        }                                                                      \
        if(((GrxColor)(c) < GrColorInfo->ncolors) &&                            \
           (GrColorInfo->ctable[(GrxColor)(c)].defined)) {                      \
        *(r) = GrColorInfo->ctable[(GrxColor)(c)].r;                            \
        *(g) = GrColorInfo->ctable[(GrxColor)(c)].g;                            \
        *(b) = GrColorInfo->ctable[(GrxColor)(c)].b;                            \
        break;                                                                 \
        }                                                                      \
        *(r) = *(g) = *(b) = 0;                                                \
} while(0)
#define GrQueryColor2ID(c,hcolor) do {                                         \
        if(GrColorInfo->RGBmode) {                                             \
        *(hcolor) = GrRGBcolorRed(c) << 16;                                    \
        *(hcolor) |= GrRGBcolorGreen(c) << 8;                                  \
        *(hcolor) |= GrRGBcolorBlue(c);                                        \
        break;                                                                 \
        }                                                                      \
        if(((GrxColor)(c) < GrColorInfo->ncolors) &&                            \
           (GrColorInfo->ctable[(GrxColor)(c)].defined)) {                      \
        *(hcolor) = GrColorInfo->ctable[(GrxColor)(c)].r;                       \
        *(hcolor) = GrColorInfo->ctable[(GrxColor)(c)].g;                       \
        *(hcolor) = GrColorInfo->ctable[(GrxColor)(c)].b;                       \
        break;                                                                 \
        }                                                                      \
        *(hcolor) = 0;                                                         \
} while(0)