bindings/vala/grx-3.0.vapi

/*
 * Copyright 2014-2015 David Lechner <david@lechnology.com>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 * MA 02110-1301, USA.
 */

/* grx-3.0.vapi - Bindings to the GRX graphics library */

/**
 * Old school (circa 1992-2000) 2-D graphics library.
 *
 * Find out more at [[http://grx.gnu.de]].
 */
[CCode (cheader_filename = "grx-3.0.h", cprefix = "Grx", lower_case_cprefix = "grx_")]
namespace Grx {
    [CCode (cname = "int", has_type_id = false)]
    public enum Result {
        [CCode (cname = "0")]
        OK,
        [CCode (cname = "-1")]
        ERROR;
    }

    [CCode (has_destroy_function = false, has_copy_function = false, has_type_id = false)]
    [SimpleType]
    public struct Color : uint32 {
        [CCode (cname = "GrColorValue")]
        public Color value ();
        [CCode (cname = "GrColorMode")]
        public ColorMode mode ();
        [CCode (cname = "GrWriteModeColor")]
        public ColorMode to_write_mode ();
        [CCode (cname = "GrXorModeColor")]
        public ColorMode to_xor_mode ();
        [CCode (cname = "GrOrModeColor")]
        public ColorMode to_or_mode ();
        [CCode (cname = "GrAndModeColor")]
        public ColorMode to_and_mode ();
        [CCode (cname = "GrImageModeColor")]
        public ColorMode to_image_mode ();

        [CCode (cname = "GrResetColors")]
        public static void reset ();
        [CCode (cname = "GrSetRGBcolorMode")]
        public static void set_rgb_mode ();
        [CCode (cname = "GrRefreshColors")]
        public static void refresh ();

        [CCode (cname = "GrNumColors")]
        public static uint num ();
        [CCode (cname = "GrNumFreeColors")]
        public static uint num_free ();

        public static Color black { [CCode (cname = "GrBlack")]get; }
        public static Color white { [CCode (cname = "GrWhite")]get; }

        public const Color VALUE_MASK;
        public const Color MODE_MASK;
        public const Color NONE;

        [CCode (cname = "GrBuildRGBcolorT")]
        public static Color build_rgb_t (int r, int g, int b);
        [CCode (cname = "GrBuildRGBcolorR")]
        public static Color build_rgb_r (int r, int g, int b);
        [CCode (cname = "GrRGBcolorRed")]
        public int red ();
        [CCode (cname = "GrRGBcolorGreen")]
        public int green ();
        [CCode (cname = "GrRGBcolorBlue")]
        public int blue ();

        [CCode (cname = "GrAllocColor")]
        public static Color alloc (int r, int g, int b);   /* shared, read-only */
        [CCode (cname = "GrAllocColorID")]
        public static Color alloc_id (int r, int g, int b); /* potentially inlined version */
        [CCode (cname = "GrAllocColor2")]
        public static Color alloc_rrggbb (long hcolor);        /* shared, read-only, 0xRRGGBB */
        [CCode (cname = "GrAllocColor2ID")]
        public static Color alloc_rrggbb_id (long hcolor);      /* potentially inlined version */
        [CCode (cname = "GrAllocCell")]
        public static Color alloc_cell ();                 /* unshared, read-write */

        [CCode (cname = "GrAllocEgaColors", array_length_cexpr = "16")]
        public static Color[] alloc_ega_colors ();           /* shared, read-only standard EGA colors */

        [CCode (cname = "GrSetColor")]
        public void set (int r, int g, int b);
        [CCode (cname = "GrFreeColor")]
        public void free ();
        [CCode (cname = "GrFreeCell")]
        public void free_cell ();

        [CCode (cname = "GrQueryColor")]
        public void query (out int r, out int g, out int b);
        [CCode (cname = "GrQueryColorID")]
        public void query_id (out int r, out int g, out int b);
        [CCode (cname = "GrQueryColor2")]
        public void query_rrggbb (out long hcolor);
        [CCode (cname = "GrQueryColor2ID")]
        public void query_rrggbb_id (out long hcolor);

        [CCode (cname = "GrColorSaveBufferSize")]
        public static int save_buffer_size ();
        [CCode (cname = "GrSaveColors")]
        public static void save_colors (void *buffer);
        [CCode (cname = "GrRestoreColors")]
        public static void restore_colors (void *buffer);
    }

    /**
     * Available video modes (for {@link set_mode})
     */
    [CCode (cprefix = "GRX_GRAPHICS_MODE_", has_type_id = false)]
    public enum GraphicsMode {
        UNKNOWN_MODE,
        TEXT_80X25,
        TEXT_DEFAULT,
        TEXT_WIDTH_HEIGHT,
        TEXT_WIDTH_HEIGHT_COLOR,
        TEXT_WIDTH_HEIGHT_BPP,
        GRAPHICS_DEFAULT,
        GRAPHICS_WIDHT_HEIGHT,
        GRAPHICS_WIDTH_HEIGHT_COLOR,
        GRAPHICS_WIDTH_HEIGHT_BPP,
        GRAPHICS_CUSTOM,
        GRAPHICS_CUSTOM_BPP,
        TEXT_80_25_NC,
        TEXT_DEFAULT_NC,
        TEXT_WIDTH_HEIGHT_NC,
        TEXT_WIDTH_HEIGHT_COLOR_NC,
        TEXT_WIDTH_HEIGHT_BPP_NC,
        GRAPHICS_DEFAULT_NC,
        GRAPHICS_WIDTH_HEIGHT_NC,
        GRAPHICS_WIDTH_HEIGHT_COLOR_NC,
        GRAPHICS_WIDTH_HEIGHT_BPP_NC,
        GRAPHICS_CUSTOM_NC,
        GRAPHICS_CUSTOM_BPP_NC
    }

    /**
     * Available frame modes (video memory layouts)
     */
    [CCode (cprefix = "GRX_FRAME_MODE_", has_type_id = false)]
    public enum FrameMode {
        /* ====== video frame buffer modes ====== */

        /**
         * Undefined
         */
        UNDEFINED,

        /**
         * Text modes
         */
        TEXT,

        /* ==== linear frame buffer modes  ====== */

        /**
         * mono
         */
        LFB_MONO01,

        /**
         * mono
         */
        LFB_MONO10,

        /**
         * (Super) VGA 256 color
         */
        LFB_8BPP,

        /**
         * Super VGA 32768/65536 color
         */
        LFB_16BPP,

        /**
         * Super VGA 16M color
         */
        LFB_24BPP,

        /**
         * Super VGA 16M color padded #1
         */
        LFB_32BPP_LOW,

        /**
         * Super VGA 16M color padded #2
         */
        LFB_32BPP_HIGH,
        /* ====== system RAM frame buffer modes ====== */

        /**
         * mono
         */
        RAM_1BPP,

        /**
         * 16 color planar
         */
        RAM_4BPP,

        /**
         * 256 color
         */
        RAM_8BPP,

        /**
         * 32768/65536 color
         */
        RAM_16BPP,

        /**
         * 16M color
         */
        RAM_24BPP,

        /**
         * 16M color padded #1
         */
        RAM_32BPP_LOW,

        /**
         * 16M color padded #2
         */
        RAM_32BPP_HIGH;

        public int get_n_planes ();
        public int get_line_offset (int width);
        public long get_plane_size (int width, int height);
        public long get_context_size (int width, int height);
    }

    /**
     * Supported video adapter types.
     */
    [CCode (cprefix = "GRX_VIDEO_ADAPTER_", has_type_id = false)]
    public enum VideoAdapter {

        /**
         * not known (before driver set)
         */
        UNKNOWN,

        /**
         * X11 driver
         */
        XWIN,

        /**
         * WIN32 driver
         */
        WIN32,

        /**
         * Linux framebuffer
         */
        LINUX_FB,

        /**
         * SDL driver
         */
        SDL,

        /**
         * memory only driver
         */
        MEMORY
    }

    [CCode (cprefix = "GRX_VIDEO_DRIVER_FLAG_", has_type_id = false)]
    [Flags]
    public enum VideoDriverFlags {
        USER_RESOLUTION
    }

    [CCode (free_function = "g_free", has_type_id = false)]
    [Compact]
    public class VideoDriver {
        [CCode (cname = "GrxVideoDriver", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        public string name;
        public VideoAdapter adapter;
        public VideoDriver inherit;
        [CCode (array_length_cname = "n_modes", array_length_type = "int")]
        public VideoMode[] modes;
        public VideoDriverDetect detect;
        public VideoDriverInit init;
        public VideoDriverReset reset;
        public VideoDriverSelectMode select_mode;
        public VideoDriverFlags flags;

        [CCode (cname = "g_malloc0")]
        public VideoDriver (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    [CCode (has_target = false, has_type_id = false)]
    public delegate int VideoDriverDetect ();
    [CCode (has_target = false, has_type_id = false)]
    public delegate int VideoDriverInit (string options);
    [CCode (has_target = false, has_type_id = false)]
    public delegate void VideoDriverReset ();
    [CCode (has_target = false, has_type_id = false)]
    public delegate VideoMode VideoDriverSelectMode (VideoDriver driver, int width, int height, int bpp, int text, ref uint ep);

    /*
     * Video driver mode descriptor structure.
     */
    [CCode (free_function = "g_free", has_type_id = false)]
    [Compact]
    public class VideoMode {
        [CCode (cname = "GrxVideoMode", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        public char present;
        public char bpp;
        public short width;
        public short height;
        public short mode;
        public int line_offset;
        public int user_data;
        public VideoModeExt extended_info;

        [CCode (cname = "g_malloc0")]
        public VideoMode (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    /**
     * Video mode flag bits (in the #GrxVideoModeExt structure)
     */
    [CCode (cprefix = "GRX_VIDEO_MODE_FLAG_", has_type_id = false)]
    [Flags]
    public enum VideoModeFlags {
        LINEAR,
        ACCEL,
        FAST_SVGA8 ,
        MEMORY,
    }

    /**
     * Video driver mode descriptor extension structure.
     *
     * This is a separate structure accessed via a pointer from the main mode
     * descriptor. The reason for this is that frequently several modes can
     * share the same extended info.
     */
    [CCode (free_function = "g_free", has_type_id = false)]
    [Compact]
    public class VideoModeExt {
        [CCode (cname = "GrxVideoModeExt", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        public FrameMode mode;
        public FrameDriver driver;
        [CCode (cname = "frame")]
        public char *fb_data;
        [CCode (cname = "cpos", array_length_cexpr = "3")]
        public char[] color_precision;
        [CCode (cname = "cprec", array_length_cexpr = "3")]
        public char[] color_position;
        public VideoModeFlags flags;
        public VideoModeSetup setup;
        public VideoModeSetSize set_virtual_size;
        public VideoModeScroll scroll;
        public VideoModeSetBank set_bank;
        public VideoModeSetRWBanks set_rw_banks;
        public VideoModeLoadColor load_color;
        public int lfb_selector;

        [CCode (cname = "g_malloc0")]
        public VideoModeExt (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }
